# pde_solver

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  PDE_EXPANSION_PLANS.md  PDE_TERMS_IMPLEMENTATION_PLAN.md  PROJECT_DOCS.md  README.md  imgui.ini
docs/planning/: DOCKING_SYSTEM_PLAN.md  MASTER_ROADMAP.md  PDE_EXPANSION_PLANS.md  PDE_TERMS_IMPLEMENTATION_PLAN.md  README.md
docs/reference/: LATEX_PREVIEW_ARCHITECTURE.md  LATEX_TOKEN_REGISTRY.md
gui_gl/: DOCKING_SYSTEM_PLAN.md  GlViewer.cpp  GlViewer.h  app_helpers.cpp  app_helpers.h  app_state.cpp  app_state.h  main.cpp  progress_feedback.h  templates.cpp  templates.h  ui_helpers.cpp  ui_helpers.h  validation.cpp  validation.h
gui_gl/components/: color_picker.cpp  color_picker.h  comparison_tools.cpp  comparison_tools.h  error_dialog.cpp  error_dialog.h  inspection_tools.cpp  inspection_tools.h  log_panel.cpp  log_panel.h  plot_widget.cpp  plot_widget.h  ui_component.cpp  ui_component.h
gui_gl/config/: default_ui.json
gui_gl/core/: app_actions.h  app_services.h  application.cpp  application.h  application_tabs.cpp  event_handler.cpp  event_handler.h  native_menu.cpp  native_menu.h  window_manager.cpp  window_manager.h
gui_gl/docking/: dock_node.cpp  dock_node.h  docking_context.cpp  docking_context.h  layout_serializer.cpp  layout_serializer.h  preset_layouts.cpp  preset_layouts.h  view_registration.cpp  view_registration.h  view_registry.cpp  view_registry.h  view_state_registry.cpp  view_state_registry.h  view_types.h
gui_gl/handlers/: file_handler.cpp  file_handler.h  solve_handler.cpp  solve_handler.h
gui_gl/io/: file_utils.cpp  file_utils.h  image_export.cpp  image_export.h  preferences_io.cpp  preferences_io.h
gui_gl/latex/: latex_bitmap.h  latex_preview_draw.cpp  latex_preview_draw.h  latex_render_service.cpp  latex_render_service.h  latex_texture.h  mathtext_bitmap_renderer.cpp  microtex_imgui_painter.cpp  microtex_rgba_graphic.cpp  microtex_rgba_graphic.h  preview_font_paths.cpp  preview_font_paths.h
gui_gl/models/: application_state.cpp  application_state.h
gui_gl/panels/inspect/: advanced_panel.cpp  advanced_panel.h  animation_export_panel.cpp  animation_export_panel.h  comparison_panel.cpp  comparison_panel.h  convergence_panel.cpp  convergence_panel.h  export_panel.cpp  export_panel.h  field_panel.cpp  field_panel.h  isosurface_panel.cpp  isosurface_panel.h  point_probe_panel.cpp  point_probe_panel.h  slice_panel.cpp  slice_panel.h  statistics_panel.cpp  statistics_panel.h
gui_gl/panels/main/: boundary_panel.cpp  boundary_panel.h  compute_panel.cpp  compute_panel.h  domain_panel.cpp  domain_panel.h  equation_panel.cpp  equation_panel.h  grid_panel.cpp  grid_panel.h  initial_conditions_panel.cpp  initial_conditions_panel.h  material_properties_panel.cpp  material_properties_panel.h  mesh_preview_panel.cpp  mesh_preview_panel.h  (+12 more)
gui_gl/rendering/: coordinate_transforms.cpp  coordinate_transforms.h  glyph_renderer.cpp  glyph_renderer.h  grid_builder.cpp  grid_builder.h  mesh_builder.cpp  mesh_builder.h  projection.cpp  projection.h  render_types.cpp  render_types.h  renderer.cpp  renderer.h  shader_manager.cpp  shader_manager.h  value_sampling.cpp  value_sampling.h  view_mode.h
gui_gl/solver/: solver_manager.cpp  solver_manager.h
gui_gl/styles/: ui_style.cpp  ui_style.h
gui_gl/systems/: backend_capabilities.cpp  backend_capabilities.h  backend_providers.cpp  backend_providers.h  command_history.cpp  command_history.h  coordinate_system_registry.cpp  coordinate_system_registry.h  pde_type_registry.cpp  pde_type_registry.h  solver_method_registry.cpp  solver_method_registry.h  ui_config.cpp  ui_config.h  ui_config_validation.cpp
gui_gl/testing/: test_result_types.h  test_runner.cpp  test_runner.h
gui_gl/tools/: comparison_tools.cpp  comparison_tools.h  selection_tool.cpp  selection_tool.h  statistics_compute.cpp  statistics_compute.h
gui_gl/utils/: coordinate_utils.cpp  coordinate_utils.h  file_dialog.cpp  file_dialog.h  math_utils.cpp  math_utils.h  path_utils.cpp  path_utils.h  string_utils.cpp  string_utils.h
include/: advection.h  advection_tests.h  backend.h  backend_capability_matrix.h  boundary_types.h  boundary_utils.h  coefficient_evaluator.h  conserved_monitor.h  coordinate_metrics.h  coupled_examples.h  coupled_solver.h  cuda_solver.h  dataset_tools.h  embedded_boundary.h  expression_eval.h  finite_differences.h  input_parse.h  latex_parser.h  latex_patterns.h  latex_token_registry.h  log_service.h  mesh_io.h  metal_solver.h  mms.h  newton_krylov.h  nonlinear_derivatives.h  nonlinear_solve.h  pde_types.h  pressure_projection.h  pressure_projection_tests.h  progress.h  residual.h  residual_operator.h  run_config.h  run_metadata.h  run_summary.h  safe_math.h  self_test.h  shape_io.h  shape_utils.h  (+10 more)
include/fv/: flux.h  fv_discretization.h  hyperbolic_bc.h  riemann.h
src/: advection.cpp  advection_tests.cpp  backend_capability_matrix.cpp  backend_detect.cpp  backend_solve.cpp  boundary_utils.cpp  coefficient_evaluator.cpp  conserved_monitor.cpp  coordinate_metrics.cpp  coupled_examples.cpp  coupled_solver.cpp  dataset_tools.cpp  embedded_boundary.cpp  expression_eval.cpp  finite_differences.cpp  input_parse.cpp  input_parse_domain.cpp  input_parse_validate.cpp  latex_ast.cpp  latex_lexer.cpp  latex_parser.cpp  latex_token_registry.cpp  log_service.cpp  main.cpp  mesh_io.cpp  mms.cpp  newton_krylov.cpp  nonlinear_derivatives.cpp  nonlinear_solve.cpp  pressure_projection.cpp  pressure_projection_tests.cpp  residual.cpp  residual_operator.cpp  run_config.cpp  run_metadata.cpp  run_summary.cpp  self_test.cpp  shape_io.cpp  shape_utils.cpp  solve_service.cpp  (+9 more)
src/fv/: flux.cpp  fv_discretization.cpp  hyperbolic_bc.cpp  riemann.cpp
tests/: README.md  burgers_fd_test.cpp  checkpoint_equivalence.cpp  latex_coefficient_parse_test.cpp  latex_render_smoke_test.cpp  latex_token_registry_test.cpp  pde_poisson.sh  reaction_diffusion_imex_test.cpp  regression_suite.cpp  shock_tube_test.cpp  smoke.sh
tools/: generate_latex_token_docs.py  latex_token_export.cpp  render_latex.py
(+42 files in other folders)
